src/styles.css
body {
  font-family: 'Rajdhani', sans-serif;
  background-image: linear-gradient(rgb(15, 5, 80), white);
}

.main {
  height: 100vh;
  color: white;
  font-size: 40px;
}

footer {
  padding: 80px;
  color: black;
  text-align: center;
}

nav {
  display: flex;
  justify-content: space-between;
}

ul {
  display: flex;
  list-style-type: none;
  width: 600px;
  justify-content: space-around;
  font-size: 30px;
}

li {
  text-decoration: none;
}

h1 {
  font-family: 'Lobster', sans-serif;
  color: rgb(185, 201, 201);
  font-size: 100px;
  font-weight: 300;
  margin: 0px;
}

h2 {
  font-size: 60px;
  color: rgb(185, 201, 201);
  margin: 0px;
}

.skills-outer {
  margin-top: 100px;
}

.skills-h2 {
  margin-left: 25px;
}

.skills {
  display: flex;
  margin-top: ;
}

.skills2 {
  display: flex;
  margin-top: 10px;
  justify-content: center;
}

.skills-text {
  font-size: 18px;
  text-align: center;
}

.skills-logo {
  height: 60px;
  width: 65px;
  margin: 20px;
  justify-content: space-around;
}

.skills-logo:hover {
  background-color: rgb(141, 139, 139);
}

.azure {
  color: rgb(210, 226, 226);
}

.email {
  color: black;
}

.gmail {
  font-size: 24px;
  font-weight: 450;
}

p {
  margin: 0;
  font-size: ;
  font-weight: ;
}

.subtext {
  font-size: 20px;
  font-weight: ;
}

.main-area {
  display: flex;
  /* flex-direction: column; */
  height: 100%;
  justify-content: space-between;
  align-items: center;
  margin-top: 140px;
}

.main-text {
  margin-left: 50px;
  margin-bottom: 200px;
}

.button {
  width: 200px;
  height: 45px;
  background-color: rgb(242, 114, 67);
  border-radius: 30px;
  text-align: center;
  font-size: 30px;
  padding-top: 5px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.button:hover {
  background-color: rgb(255, 153, 116);
}

.button:active {
  background-color: darkgrey;
  color: rgb(194, 194, 194);
}

.socials {
  padding-bottom: 200px;
}

.logo {
  height: 100px;
  margin: 20px;
  border-radius: 20px;
}

.socials {
  margin: 20px;
}

.linkedIn-logo {
  height: 70px;
}

.linkedIn {
  text-align: center;
  font-size: 30px;
  margin:20px;
}

.linkedIn-link {
  text-decoration: none;
}

.github-logo {
  height: 75px;
}

.github {
  text-align: center;
  font-size: 30px;
  margin: 20px;
}

.github-link {
  text-decoration: none;
}

.sub-section1 {
  display: flex;
  justify-content: space-around;
  margin-top: 200px;
  padding: 100px;
}

.sub-section2 {
  display: flex;
  flex-direction: column;
  text-align: center;
  padding: 80px;
}

.headshot {
  width: 300px;
  height: 300px;
  border-radius: 150px;
}
.headshot-container {
  display: flex;
  align-items: center;
}

.project-card {
  background-color: azure;
  width: 300px;
  height: 500px;
  border-radius: 10px;
  box-shadow: 5px 5px 20px rgb(47, 47, 47);
  margin: 10px;
}

.project-container {
  display: flex;
  justify-content: space-around;
}

@media only screen and (max-width: 1000px) {
  .project-container {
    display: flex;
    flex-wrap: wrap;
  }
}

.project-image {
  margin-top: 25px;
  width: 250px;
  border-radius: 125px;
}

hr {
  margin-left: 20px;
  margin-right: 20px;
}

.project-link {
  text-align: none;
  color: rgb(255, 153, 116);
}

a {
  text-decoration: none;
  color: white;
}

.hamburger {
  display: none;
}

.hamburger:focus{
  outline: 0;
}

@media only screen and (max-width: 1000px) {
  .hamburger {
    display: block;
    border: 0;
    background-color: transparent;
    color: rgb(185, 201, 201);
    font-size: 30px;
    margin: 20px;

    align-self: flex-end;
  }

  ul {
    display: none;
    margin: 0px;
  }

  ul.show {
    display: block;
  }

  li {
    padding-bottom: 15px;
  }

  nav {
    display: flex;
    flex-direction: column-reverse;
    /* background-color: rgb(33, 28, 64); */
    background-image: linear-gradient(rgb(30, 21, 88), rgb(68, 107, 162), rgb(30, 21, 88));

  }
  .logo {
    height: 80px;
    width: 80px;
    display: none;
  }
}

